Refactor in Swagger and controllers
