# src/controllers/ToolsController.js
@@ -3,22 +3,20 @@ const mongoose = require('mongoose')
 
 module.exports = {
 
+    // TODO: Implementar paginacao  
     async findAll(req, res) {
 
         let tools = null
         if (req.query.tag !== undefined) {
             const { tag } = req.query
-            tools = await Tools.find({ tags: tag })
+            tools = await Tools.find({ tags: tag })            
         } else {
             tools = await Tools.find().sort('-createdAt')     
         }
 
-        if (!tools) return res.status(404).json({ error: "Tools not found." })
-        //return res.json(tools)
-
-        const toolsSort = JSON.parse(JSON.stringify(tools, ["_id","title","link","description","tags","createdAt","updatedAt"]))
-        return res.json(toolsSort)
-
+        if (tools.length === 0) return res.status(404).json({ error: "Tools not found!" })
+        
+        return res.json(tools)
 
     },
 
@@ -26,35 +24,45 @@ module.exports = {
         const { id } = req.params
 
         if(!mongoose.Types.ObjectId.isValid(id)){
-            return res.status(404).json({ error: "Invalid ID." })
+            return res.status(400).json({ error: "Invalid ID!" })
         }
 
-        if (!id) return res.status(400).json({ error: "ID is required." })
+        if (!id) return res.status(400).json({ error: "ID is required!" })
 
-        const tool = await Tools.findById(id)
-        return res.json(tool)
+        try{
+            const tool = await Tools.findById(id)
+            if (!tool) return res.status(404).json({ error: "Tool not found!" })
+            return res.json(tool)
+        } catch (err) {
+            return res.status(400).send({ error: "Error loading tool!" })
+        }              
+        
     },
 
     async update(req, res) {
         const { id } = req.params
 
         if(!mongoose.Types.ObjectId.isValid(id)){
-            return res.status(404).json({ error: "Invalid ID." })
+            return res.status(400).json({ error: "Invalid ID!" })
         }
 
-        if (!id) return res.status(400).json({ error: "ID is required." })
+        if (!id) return res.status(400).json({ error: "ID is required!" })
 
-        const tool = await Tools.findByIdAndUpdate(id, req.body, {
-            new: true
-        })
-        return res.json(tool)
+        try{
+            const tool = await Tools.findByIdAndUpdate(id, req.body, {
+                new: true
+            })
+            return res.json(tool)
+        } catch (err) {
+            return res.status(400).send({ error: "Error updating tool!" })
+        }
     },
 
     async store(req, res) {
         //console.log(req.body)
 
         const { title, link, description, tags } = req.body
-        if (!title || !link) return res.status(400).json({ error: "Invalid Tool." })
+        if (!title || !link) return res.status(400).json({ error: "Invalid Tool!" })
 
         try {
             const tool = await Tools.create({
@@ -62,7 +70,7 @@ module.exports = {
             })
             return res.status(201).json(tool)
         } catch (err) {
-            return res.status(400).send({ error: "Error when create a new tool." })
+            return res.status(400).send({ error: "Error creating tool!" })
         }
 
     },
@@ -71,14 +79,18 @@ module.exports = {
         const { id } = req.params
 
         if(!mongoose.Types.ObjectId.isValid(id)){
-            return res.status(404).json({ error: "Invalid ID." })
+            return res.status(404).json({ error: "Invalid ID!" })
         }
 
-        if (!id) return res.status(400).json({ error: "ID is required." })
+        if (!id) return res.status(400).json({ error: "ID is required!" })
 
-        await Tools.findByIdAndRemove(id)
+        try{
+            await Tools.findByIdAndRemove(id)
+            return res.status(204).send()
+        } catch(err){
+            return res.status(400).send({ error: "Error deleting tool!" })
+        }
 
-        return res.status(204).send()
     }
 
 }
