# src/swagger.json
@@ -1,13 +1,13 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "VUTTR API (Very Useful Tools to Remember), um repositório para gerenciar ferramentas com seus respectivos nomes, links, descrições e tags. Desafio Bossabox [Github](https://github.com/reginaldolribeiro/challenge-vuttr-reginaldo).",
+        "description": "VUTTR API (Very Useful Tools to Remember), um repositório para gerenciar ferramentas com seus respectivos nomes, links, descrições e tags. Disponivel no [Github](https://github.com/reginaldolribeiro/challenge-vuttr-reginaldo).",
         "version": "1.0.0",
         "title": "VUTTR API",
         "contact": {
             "name": "Reginaldo Luiz Ribeiro Filho",
             "email": "reginaldolribeiro@gmail.com",
-            "url": "https://github.com/reginaldolribeiro"
+            "url": "https://www.linkedin.com/in/reginaldolribeiro/"
         }
     },
     "servers": [
@@ -41,7 +41,7 @@
                     "description": "User to create",
                     "required": true,
                     "schema": {
-                        "$ref": "#/definitions/User"
+                        "$ref": "#/definitions/UserRegister"
                     }                    
                 }],                
                 "produces": [
@@ -103,6 +103,12 @@
                     "Tools"
                 ],
                 "summary": "Get tools",
+                "parameters": [{
+                    "in": "query",
+                    "name": "tag",
+                    "required": false,
+                    "type": "string"
+                }],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -131,7 +137,7 @@
                     "name": "Tool",                    
                     "required": true,
                     "schema": {
-                        "$ref": "#/definitions/Tool"
+                        "$ref": "#/definitions/ToolRequest"
                     }                    
                 }],
                 "produces": [
@@ -220,7 +226,7 @@
                         "name": "Tool",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/Tool"
+                            "$ref": "#/definitions/ToolRequest"
                         }                    
                     }                    
                 ],
@@ -262,8 +268,8 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK"
+                    "204": {
+                        "description": "No content"
                     },
                     "401": {
                         "description": "Unauthorized."
@@ -287,6 +293,26 @@
     },
     "definitions": {
         "User": {
+            "type": "object",
+            "properties": {
+                "_id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
+        "UserRegister": {
             "type": "object",
             "properties": {
                 "name": {
@@ -315,29 +341,43 @@
             "type": "object",
             "properties": {
                 "user": {
-                    "_id": {
-                        "type": "int"
-                    },
-                    "name": {
-                        "type": "string"
-                    },
-                    "email": {
-                        "type": "string"
-                    }
+                    "$ref": "#/definitions/User"
                 },
                 "token": "string"
-            }
-        },
-        "id": {
-            "properties": {
-                "id": {
-                    "type": "ObjectId"
-                }
             }
         },
         "Tool": {
             "type": "object",
             "properties": {
+                "_id": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "link": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "tags": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
+        "ToolRequest": {
+            "type": "object",
+            "properties": {                
                 "title": {
                     "type": "string"
                 },
